--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Challenge</string>
+
+    <!-- Error Strings -->
+    <string name="error_title">THIS IS AN ERROR</string>
+    <string name="error_description">Please Retry</string>
+    <string name="retry_button">Retry</string>
+    <!-- Unauthorized Strings -->
+    <string name="unauthorized_title">THIS IS AN ERROR</string>
+    <string name="unauthorized_description">Please logout and login later</string>
+
 </resources>
