--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <!-- Unauthorized Strings -->
     <string name="unauthorized_title">THIS IS AN ERROR</string>
     <string name="unauthorized_description">Please logout and login later</string>
+    <string name="buscar_en_mercado_libre">Buscar en Mercado Libre</string>
 
 </resources>
