--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,13 @@
     <string name="error_title">THIS IS AN ERROR</string>
     <string name="error_description">Please Retry</string>
     <string name="retry_button">Retry</string>
+
     <!-- Unauthorized Strings -->
     <string name="unauthorized_title">THIS IS AN ERROR</string>
     <string name="unauthorized_description">Please logout and login later</string>
-    <string name="buscar_en_mercado_libre">Buscar en Mercado Libre</string>
+    <string name="find_in_mercado_libre">Buscar en Mercado Libre</string>
+
+    <!-- Price -->
+    <string name="price_format">$  %1$s</string>
 
 </resources>
